name:                kalium
version:             0.1.0.0
synopsis:            A Pascal to Haskell translator.
license:             BSD3
license-file:        LICENSE
author:              Index Int
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Kalium
                       Kalium.Util
                       Kalium.Error
                       Kalium.Pascal.Program
                       Kalium.Pascal.Parse
                       Kalium.Pascal.Tokenize
                       Kalium.Pascal.Convert
                       Kalium.Haskell.Convert
                       Kalium.Haskell.Sugar
                       Kalium.Haskell.Imports
                       Kalium.Nucleus.Scalar.Program
                       Kalium.Nucleus.Scalar.Operator
                       Kalium.Nucleus.Scalar.Build
                       Kalium.Nucleus.Scalar.Typecheck
                       Kalium.Nucleus.Scalar.Atomize
                       Kalium.Nucleus.Scalar.Valueficate
                       Kalium.Nucleus.Vector.Program
                       Kalium.Nucleus.Vector.Operator
                       Kalium.Nucleus.Vector.Name
                       Kalium.Nucleus.Vector.Recmap
                       Kalium.Nucleus.Vector.Pattern
                       Kalium.Nucleus.Vector.Match
                       Kalium.Nucleus.Vector.Inline
                       Kalium.Nucleus.Vector.BindClean
                       Kalium.Nucleus.Vector.ArgClean
                       Kalium.Nucleus.Vector.Purify
                       Kalium.Nucleus.Vector.Attempt
                       Kalium.Nucleus.Vector.Context
                       Kalium.Nucleus.Vector.Cost
                       Kalium.Nucleus.Vector.Sanity
                       Kalium.Nucleus.Vector.Show
                       Kalium.Nucleus.Vectorize
                       Control.Monad.Rename
                       Control.Monad.Config
                       Control.Dependent

  build-depends:       base
               ,       transformers
               ,       mtl
               ,       containers
               ,       unordered-containers
               ,       array
               ,       lens
               ,       profunctors
               ,       haskell-src-exts == 1.16.*
               ,       parsec

  ghc-options:         -W -O2
  ghc-prof-options:    -fprof-auto
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                    ,  MultiWayIf
                    ,  PatternSynonyms
                    ,  ViewPatterns
                    ,  TupleSections
                    ,  ScopedTypeVariables
                    ,  ConstraintKinds
                    ,  RankNTypes
                    ,  MultiParamTypeClasses
                    ,  NoImplicitPrelude

executable kalium-tool
  main-is:             Main.hs
  build-depends:       base
               ,       mtl
               ,       optparse-applicative
               ,       kalium
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
  ghc-prof-options:    -fprof-auto
  hs-source-dirs:      src/kalium-tool
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite test
  main-is:             Test.hs
  build-depends:       base
               ,       lens
               ,       mtl
               ,       bytestring
               ,       process
               ,       temporary
               ,       directory
               ,       tasty
               ,       tasty-hunit
               ,       kalium
  type:                exitcode-stdio-1.0
  hs-source-dirs:      testing
  ghc-options:         -W
  default-language:    Haskell2010
  default-extensions:  LambdaCase
