name:                kalium
version:             0.1.0.0
synopsis:            Translate Pascal into Haskell
description:
    Kalium is a Pascal to Haskell translator. The ultimate goal is to generate
    idiomatic functional code from imperative code.
category:            Code Generation
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
homepage:            http://int-index.github.io/kalium/
bug-reports:         http://github.com/int-index/kalium/issues
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:                git
  location:            git://github.com/int-index/kalium.git

library
  exposed-modules:     Kalium
                       Kalium.Util
                       Kalium.Error
                       Kalium.Pascal.Program
                       Kalium.Pascal.Parse
                       Kalium.Pascal.Tokenize
                       Kalium.Pascal.Convert
                       Kalium.Haskell.Convert
                       Kalium.Haskell.Sugar
                       Kalium.Haskell.Imports
                       Kalium.Nucleus.Scalar.Program
                       Kalium.Nucleus.Scalar.Operator
                       Kalium.Nucleus.Scalar.Build
                       Kalium.Nucleus.Scalar.Typecheck
                       Kalium.Nucleus.Scalar.Atomize
                       Kalium.Nucleus.Scalar.Valueficate
                       Kalium.Nucleus.Vector.Program
                       Kalium.Nucleus.Vector.Operator
                       Kalium.Nucleus.Vector.Name
                       Kalium.Nucleus.Vector.Recmap
                       Kalium.Nucleus.Vector.Pattern
                       Kalium.Nucleus.Vector.Match
                       Kalium.Nucleus.Vector.Inline
                       Kalium.Nucleus.Vector.BindClean
                       Kalium.Nucleus.Vector.ArgClean
                       Kalium.Nucleus.Vector.Purify
                       Kalium.Nucleus.Vector.Attempt
                       Kalium.Nucleus.Vector.Context
                       Kalium.Nucleus.Vector.Cost
                       Kalium.Nucleus.Vector.Sanity
                       Kalium.Nucleus.Vector.Template
                       Kalium.Nucleus.Vector.Show
                       Kalium.Nucleus.Vectorize
                       Control.Monad.Rename
                       Control.Monad.Config
                       Control.Dependent

  build-depends:       base >= 4.7 && < 5
               ,       transformers >= 0.4
               ,       mtl >= 2.2.1
               ,       containers >= 0.5
               ,       unordered-containers >= 0.2
               ,       array >= 0.5
               ,       lens >= 4.9
               ,       profunctors >= 4.4
               ,       haskell-src-exts == 1.16.*
               ,       parsec >= 3.1
               ,       void >= 0.7

  ghc-options:         -W
  ghc-prof-options:    -fprof-auto
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                    ,  MultiWayIf
                    ,  PatternSynonyms
                    ,  ViewPatterns
                    ,  TupleSections
                    ,  ScopedTypeVariables
                    ,  ConstraintKinds
                    ,  RankNTypes
                    ,  MultiParamTypeClasses
                    ,  NoImplicitPrelude
                    ,  StandaloneDeriving
                    ,  TypeSynonymInstances

executable kalium-cli
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
               ,       mtl >= 2.2.1
               ,       optparse-applicative >= 0.11
               ,       kalium
  ghc-options:         -W -threaded "-with-rtsopts=-N"
  ghc-prof-options:    -fprof-auto
  hs-source-dirs:      kalium-cli
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite regression
  main-is:             Regression.hs
  build-depends:       base >= 4.7 && < 5
               ,       mtl >= 2.2.1
               ,       turtle >= 1.1
               ,       managed >= 1.0
               ,       foldl >= 1.0
               ,       system-filepath >= 0.4
               ,       directory >= 1.2
               ,       process >= 1.2
               ,       silently >= 1.2
               ,       text >= 1.2
               ,       tasty >= 0.10
               ,       tasty-hunit >= 0.9
               ,       kalium
  type:                exitcode-stdio-1.0
  hs-source-dirs:      testing
  ghc-options:         -W
  default-language:    Haskell2010
  default-extensions:  LambdaCase
