name:                sodium
version:             0.1.0.0
synopsis:            A Pascal to Haskell translator.
license:             BSD3
license-file:        LICENSE
author:              Index Int
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Sodium
                       Sodium.Util
                       Sodium.Error
                       Sodium.Pascal.Program
                       Sodium.Pascal.Parse
                       Sodium.Pascal.Tokenize
                       Sodium.Pascal.Convert
                       Sodium.Haskell.Program
                       Sodium.Haskell.Convert
                       Sodium.Nucleus.Program
                       Sodium.Nucleus.Program.Vector
                       Sodium.Nucleus.Scalar.Program
                       Sodium.Nucleus.Scalar.Build
                       Sodium.Nucleus.Scalar.Typecheck
                       Sodium.Nucleus.Scalar.Atomize
                       Sodium.Nucleus.Scalar.Valueficate
                       Sodium.Nucleus.Vectorize
                       Sodium.Nucleus.Pattern
                       Sodium.Nucleus.Name
                       Sodium.Nucleus.Strip

  build-depends:       base,
                       transformers,
                       mtl,
                       containers,
                       unordered-containers,
                       array,
                       lens,
                       profunctors,
                       singletons,
                       monad-supply,
                       haskell-src-exts == 1.16.*,
                       parsec
  ghc-options:         -W -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase,
                       PatternSynonyms,
                       TupleSections,
                       ScopedTypeVariables,
                       ConstraintKinds,
                       RankNTypes,
                       MultiParamTypeClasses

executable sodium-tool
  main-is:             Main.hs
  build-depends:       base,
                       mtl,
                       sodium
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
  hs-source-dirs:      src/sodium-tool
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite test
  main-is:             Test.hs
  build-depends:       base,
                       lens,
                       mtl,
                       bytestring,
                       process,
                       temporary,
                       directory,
                       tasty,
                       tasty-hunit,
                       sodium
  type:                exitcode-stdio-1.0
  hs-source-dirs:      testing
  ghc-options:         -W
  default-language:    Haskell2010
  default-extensions:  LambdaCase
